--- a/style.css
+++ b/style.css
@@ -16,5 +16,6 @@ header {
   display:flex;
   justify-content: space-between;
   align-items : center;
-  padding:10px 1px;
+  padding:10px 2px;
+}
     
