--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ header {
 }
 logo{
   text-decoration: none;
-  color:#3a6fc4;
+  color:#f0f0f0;
   text-transform:uppercase;
   font-weight:700;
   font-size:1.8em;
