--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
   scroll-behavior: smooth;
   }
 header {
-  background-color: #f0f0f0;
+  background-color: #1e97a0;
   width:100%;
   position:fixed;
   z=index: 999;
