--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ header {
   align-items : center;
   padding:10px 200px;
 }
-,logo{
+logo{
   text-decoration: none;
   color:#3a6fc4;
   text-transform:uppercase;
