--- a/style.css
+++ b/style.css
@@ -16,12 +16,13 @@ header {
   align-items : center;
   padding-left: 0%; 
 }
-logo {
+lang {
   text-decoration: none;
   color:#3a6fc4;
   text-transform:uppercase;
   font-weight:700;
   font-size:1.8em;
-  }
-  
+}
+
+
 
