--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ header {
   display:flex;
   justify-content: space-between;
   align-items : center;
-  padding-left: 0%; 
+  padding: 10px 200px ; 
 }
 .logo{
   text-decoration: none;
