--- a/style.css
+++ b/style.css
@@ -28,6 +28,10 @@ header {
   text-decoration: none;
   font-size: 1.1em;
   font-weight: 500;
+  padding-left: 30px;
+}
+.navigation a:hover{
+  color: #601cfc;
 }
 
 
