--- a/style.css
+++ b/style.css
@@ -34,8 +34,13 @@ header {
   color: #601cfc;
 }
 section {
-  padding: 100px 200px;
+    padding: 100px 200px;
 }
-
+.main {
+  width: 100px;
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+}
 
 
