--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ section {
   align-content: center;
   background: url(automate.png) no-repeat ;
   background-size: cover;
-  background-position: center;
+  background-position: center center ;
   background-attachment: fixed;
 }
 .main h2 {
