--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ section {
   background-attachment: fixed;
 }
 .main h2 {
-  color: #f0f0f0;
+  color: #fff;
   font-size: 1.4em;
   font-weight: 500;
 }
