--- a/style.css
+++ b/style.css
@@ -55,5 +55,15 @@ section {
   color: #fc1c1c;
   font-size: 3em;
   font-weight: 600;
+  display: inline-block;
+  margin-top: 10px;
+  }
+  .main h3 {
+    color: #fff;
+    font-size: 2em;
+    font-weight: 700;
+    letter-spacing: 1px;
+    margin-top: 10px;
+    margin-bottom: 30px;
 
-}
+  }
