--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ header {
   position:fixed;
   z-index: 999;
   display:flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items : center;
   padding: 10px 50px ; 
 }
