--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ header {
   display:flex;
   justify-content: space-around;
   align-items : center;
-  padding: 10px 50px ; 
+  padding: 10px ; 
 }
 .logo{
   text-decoration: none;
