--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ section {
   background-attachment: fixed;
 }
 .main h2 {
-  color: #fff;
+  color: black;
   font-size: 1.4em;
   font-weight: 500;
 }
